--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,22 @@
-.main {
+.title{
+  color: blue;
+}
+.container{
+  display: flex;
+  flex-direction: column;
+  justify-content: conter;
+  align-items: center;
+}
+
+.btn{
+  width: 150px;
+  padding: 8px 0;
+  background-color: #4979ff;
+  border-radius: 4px;
+  color: white;
+  text-align: center;
+}
+/* .main {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -131,6 +149,7 @@
 }
 
 /* Conic Gradient Animation */
+/*
 .thirteen::before {
   animation: 6s rotate linear infinite;
   width: 200%;
@@ -139,6 +158,7 @@
 }
 
 /* Inner Square */
+/*
 .thirteen::after {
   inset: 0;
   padding: 1px;
@@ -152,6 +172,7 @@
 }
 
 /* Enable hover only on non-touch devices */
+/*
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
     background: rgba(var(--card-rgb), 0.1);
@@ -174,6 +195,7 @@
 }
 
 /* Mobile */
+/*
 @media (max-width: 700px) {
   .content {
     padding: 4rem;
@@ -251,6 +273,7 @@
 }
 
 /* Tablet and Smaller Desktop */
+/*
 @media (min-width: 701px) and (max-width: 1120px) {
   .grid {
     grid-template-columns: repeat(2, 50%);
@@ -275,4 +298,4 @@
   to {
     transform: rotate(0deg);
   }
-}
+} */
