--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,44 @@
-:root {
+body{
+  background-color: #f2f2f2;
+  color: black;
+}
+nav{
+  margin: 10px auto;
+  padding: 10px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #333;
+}
+nav a{
+  color: white;
+  text-decoration: none;
+  margin-left: 12px;
+  font-size: 18px;
+  padding: 10px;
+}
+
+nav a:hover{
+  color: orange;
+}
+
+nav .logo{
+ margin-right: auto;
+ padding-left: 10px;
+}
+
+footer{
+  display: block;
+  text-align: center;
+  padding: 10px 0;
+  margin-top: 10px;
+  color: #777;
+  border-top: 1px solid #eaeaea;
+}
+a{
+  text-decoration: none;
+}
+/* :root {
   --max-width: 1100px;
   --border-radius: 12px;
   --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
@@ -104,4 +144,4 @@ a {
   html {
     color-scheme: dark;
   }
-}
+} */
